# opsmgr

./: .gitignore  README.md  README.rst  build.gradle  check.gradle  pylintrc  requirements.txt  setup.py  test-requirements.txt  tox.ini
diffs/: etc-ansible-roles-openstack-ansible-security-tasks-sshd.yml.patch  opt-openstack-ansible-tests-bootstrap-aio.yml.patch  opt-openstack-ansible-tests-roles-bootstrap-host-tasks-prepare_networking.yml.patch  opt-openstack-ansible-tests-roles-bootstrap-host-templates-user_variables.aio.yml.j2.patch
dockerfiles/: README.md
horizon/: AUTHORS  ChangeLog  MANIFEST.in  setup.cfg  setup.py
horizon/enabled/: _4000_operational_mgmt.py  _4050_operational_mgmt_inventory_panel.py
horizon/operational_mgmt/: dashboard.py  rack.py  resource.py
horizon/operational_mgmt/inventory/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
horizon/operational_mgmt/inventory/templates/inventory/: _detail_overview.html  _removeRack.html  _removeResource.html  _removeResources.html  addResource.html  changePassword.html  editRack.html  editResource.html  index.html  rack_tab.html  removeRack.html  removeResource.html  removeResources.html
horizon/operational_mgmt/templates/operational_mgmt/: base.html
horizon/opsmgr_horizon_interface.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  top_level.txt
horizon/test/integration_tests/pages/operational_management/: inventorypage.py
horizon/test/integration_tests/tests/: test_inventory.py
playbooks/: .spec  README.md  README.rst  ansible.cfg  bootstrap.yml  clean.sh  clean.yml  elk.yml  (+33 more)
(+1073 files in other folders)
