[metadata]
name = opsmgr-horizon-interface
version = 0.1
summary = opsmgr-horizon-interface
author = 
author_email = 
home-page = http://www.openstack.org/
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    operational_mgmt
